[metadata]
name = winsvc
description = Windows Service Creator
author = Gerhard Tan
author_email = gerhard.gh.ta@gmail.com
home-page = https://github.com/koho/winsvc
long-description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
setup_requires = setuptools_scm
